--- a/css/style.css
+++ b/css/style.css
@@ -101,7 +101,7 @@ body{
     display: block;
     margin-left: 20px;
 }
-#nav li{
+#nav li a{
     width: 135px;
     height: 50px;
     float: left;
@@ -110,7 +110,7 @@ body{
     line-height: 50px;
     font-size: 14px;
 }
-#nav li:hover{
+#nav li a:hover{
     background: #A61C00;
 }
 /*nav½áÊø*/
