--- a/css/style.css
+++ b/css/style.css
@@ -116,7 +116,7 @@ body{
 /*nav½áÊø*/
 /*banner¿ªÊ¼*/
 #banner{
-    width: 1349px;
+    width: 100%;
     height: 390px;
     background:url(../img/00.png) no-repeat;
 }
