--- a/css/about.css
+++ b/css/about.css
@@ -1,1 +1,38 @@
-#about
+#about{
+    background: #eeeeff;
+    height:360px;
+    padding:30px 0;
+}
+#about .wrap{
+    width:800px;
+    margin:0 auto;
+}
+#about .list{
+    width:250px;
+    height:300px;
+    float:left;
+    border:1px #EA3939 solid;
+    font-size: 18px;
+}
+#about .list div{
+    height:50px;
+    line-height:50px;
+    text-align:center;
+}
+#about .list li{
+    height:40px;
+    line-height:40px;
+    text-align: center;
+    cursor: pointer;
+    border-top: 1px solid #EA3939;
+}
+#about .content{
+    margin-left:46px;
+    width:500px;
+    height:300px;
+    float:left;
+    border:1px #EA3939 solid;
+}
+#about .content div{
+    /*display:none;*/
+}
